prevent unnecessary horizontal scroll

--- a/docs/style.css
+++ b/docs/style.css
@@ -12,6 +12,7 @@ body {
   padding: 0 20px;
   color: #333;
   font-size: 14px;
+  overflow-x: hidden;
 }
 
 a {
